crates/core/talkbank-parser-tests/tests/parser_suite/snapshots/parser_suite__snapshot_tests__parser_mor_snapshot.snap
---
source: crates/talkbank-parser-tests/tests/parser_suite/snapshot_tests.rs
expression: "rows.join(\"\\n\\n\")"
---
[tree-sitter] %mor tier
{
  "tier_type": "Mor",
  "items": [
    {
      "main": {
        "pos": "pro",
        "lemma": "I"
      }
    },
    {
      "main": {
        "pos": "v",
        "lemma": "want"
      }
    },
    {
      "main": {
        "pos": "n",
        "lemma": "cookie",
        "features": [
          "PL"
        ]
      }
    }
  ],
  "terminator": {
    "type": "period"
  }
}
