crates/core/talkbank-parser-tests/tests/parser_suite/snapshots/parser_suite__snapshot_tests__parser_word_snapshot.snap
---
source: crates/talkbank-parser-tests/tests/parser_suite/snapshot_tests.rs
assertion_line: 70
expression: "rows.join(\"\\n\\n\")"
---
[tree-sitter] word `&~baba`
{
  "raw_text": "&~baba",
  "cleaned_text": "baba",
  "content": [
    {
      "type": "text",
      "content": "baba"
    }
  ],
  "category": "nonword"
}

[tree-sitter] word `&~don`
{
  "raw_text": "&~don",
  "cleaned_text": "don",
  "content": [
    {
      "type": "text",
      "content": "don"
    }
  ],
  "category": "nonword"
}

[tree-sitter] word `&~goo`
{
  "raw_text": "&~goo",
  "cleaned_text": "goo",
  "content": [
    {
      "type": "text",
      "content": "goo"
    }
  ],
  "category": "nonword"
}
